[package]
name = "httparena-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-rt = "2"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
